test/compile-fail/resolution/conflicts/struct-use-rename/expected.txt
error: the name `a` is defined multiple times
 --> top.rhdl:5:12
  |
1 | struct a {}
  |        - previous definition of the name `a` here
5 | use b::c as a;
  |             ^ `a` redefined here
